# Photoviewer

./: .gitignore  .pre-commit-config.yaml  README.md  requirements-test.txt  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: python-package.yml
src/photov/: __main__.py  arg_parser.py  const.py  util.py  viewer.py
src/photov/GUI/: ImageBrowser.py  InfoBar.py  SrcTargetInfo.py  StatusBar.py
tests/: conftest.py  mock_imagebrowser.py  test_argparser.py  test_imageviewer.py  test_run.py
