[metadata]
name = PhotoViewer
description = A simple app for browsing image files
version = 0.1.1
author = FancySnacks
author_email = adrian.urbaniak1336@gmail.com
license = MIT
readme = README
license_files = LICENSE
platforms = unix, linux, osc, cygwin, win32

[options]
packages =
    photov
python_requires = >=3.10
install_requires =
    Pillow>=9.4.0
    customtkinter>=5.1.2
package_dir =
    = src
zip_safe = no

[options.entry_points]
console_scripts =
    photov = photov.__main__:main

[build-system]
requires = ["setuptools~=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[options.extras_require]
testing =
    pytest>=7.2.0
    pytest-cov>=4.0.0
    coverage>=7.2.0
    flake8>=6.0.0
    black>=23.3.0
    tox>=4.4.12
    mypy>=1.2.0

[options.package_data]
photov = py.typed

[coverage:run]
source = src/photov
omit = tests/*

[coverage:report]
show_missing = True

[tool:pytest]
addopts =
    --cov=photov
    --cov-report=term-missing
testpaths = [
    "tests",]

[flake8]
max-line-length = 160